more .net standard code ...

--- a/src/Aardvark.Base.Delegates/Aardvark.Base.Delegates.csproj
+++ b/src/Aardvark.Base.Delegates/Aardvark.Base.Delegates.csproj
@@ -26,4 +26,9 @@
     <None Include="Delegates_template.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Aardvark.Base.Extensions\Aardvark.Base.Extensions.csproj" />
+    <ProjectReference Include="..\Aardvark.Base.Symbol\Aardvark.Base.Symbol.csproj" />
+  </ItemGroup>
+
 </Project>
