--- a/src/Tests/Aardvark.Base.Runtime.Tests/Aardvark.Base.Runtime.Tests.fsproj
+++ b/src/Tests/Aardvark.Base.Runtime.Tests/Aardvark.Base.Runtime.Tests.fsproj
@@ -83,6 +83,11 @@
       <Project>{692a3617-719b-4ea2-abc1-407ae20094ae}</Project>
       <Private>True</Private>
     </ProjectReference>
+    <ProjectReference Include="..\..\Aardvark.Base.HashCodes\Aardvark.Base.HashCodes.csproj">
+      <Name>Aardvark.Base.HashCodes</Name>
+      <Project>{8fc336ea-7de8-428f-949d-3320208a5ee5}</Project>
+      <Private>True</Private>
+    </ProjectReference>
     <ProjectReference Include="..\..\Aardvark.Base.Incremental\Aardvark.Base.Incremental.fsproj">
       <Name>Aardvark.Base.Incremental</Name>
       <Project>{9623ae28-1f72-46e9-a3a7-85fc1a321a73}</Project>
