--- a/src/Tests/Aardvark.Base.Tests/Aardvark.Base.Tests.csproj
+++ b/src/Tests/Aardvark.Base.Tests/Aardvark.Base.Tests.csproj
@@ -73,9 +73,17 @@
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Aardvark.Base.Delegates\Aardvark.Base.Delegates.csproj">
+      <Project>{f6879d9e-0f64-4b7e-a0e9-ac005e1da843}</Project>
+      <Name>Aardvark.Base.Delegates</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Aardvark.Base.Extensions\Aardvark.Base.Extensions.csproj">
       <Project>{430d818a-45e4-4643-9a9f-091d3ed31bc7}</Project>
       <Name>Aardvark.Base.Extensions</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Aardvark.Base.HashCodes\Aardvark.Base.HashCodes.csproj">
+      <Project>{8fc336ea-7de8-428f-949d-3320208a5ee5}</Project>
+      <Name>Aardvark.Base.HashCodes</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Aardvark.Base.Reporting\Aardvark.Base.Reporting.csproj">
       <Project>{f4d5431a-43a4-4fba-b352-421ec359d03c}</Project>
@@ -88,6 +96,10 @@
     <ProjectReference Include="..\..\Aardvark.Base.Telemetry\Aardvark.Base.Telemetry.csproj">
       <Project>{ac2e2835-64c6-4553-a613-981d6e104437}</Project>
       <Name>Aardvark.Base.Telemetry</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Aardvark.Base.Tup\Aardvark.Base.Tup.csproj">
+      <Project>{e0fc963c-92e2-466f-8f38-3a12b314e394}</Project>
+      <Name>Aardvark.Base.Tup</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Aardvark.Base\Aardvark.Base.csproj">
       <Project>{377da721-c821-45f6-b803-9c8724c7b37f}</Project>
