--- a/src/Aardvark.Base.Incremental/Aardvark.Base.Incremental.fsproj
+++ b/src/Aardvark.Base.Incremental/Aardvark.Base.Incremental.fsproj
@@ -109,6 +109,11 @@
       <Project>{8fc336ea-7de8-428f-949d-3320208a5ee5}</Project>
       <Private>True</Private>
     </ProjectReference>
+    <ProjectReference Include="..\Aardvark.Base.Introspection\Aardvark.Base.Introspection.csproj">
+      <Name>Aardvark.Base.Introspection</Name>
+      <Project>{919e549b-980d-4565-b504-2d0244d23ce6}</Project>
+      <Private>True</Private>
+    </ProjectReference>
     <ProjectReference Include="..\Aardvark.Base.Reporting\Aardvark.Base.Reporting.csproj">
       <Name>Aardvark.Base.Reporting</Name>
       <Project>{f4d5431a-43a4-4fba-b352-421ec359d03c}</Project>
