extracted Aardvark.Base.Sorting

--- a/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
+++ b/src/Aardvark.Base.FSharp/Aardvark.Base.FSharp.fsproj
@@ -148,6 +148,11 @@
       <Project>{f4d5431a-43a4-4fba-b352-421ec359d03c}</Project>
       <Private>True</Private>
     </ProjectReference>
+    <ProjectReference Include="..\Aardvark.Base.Sorting\Aardvark.Base.Sorting.csproj">
+      <Name>Aardvark.Base.Sorting</Name>
+      <Project>{59dcc8ab-aeea-4134-8f46-d99afd4216a5}</Project>
+      <Private>True</Private>
+    </ProjectReference>
     <ProjectReference Include="..\Aardvark.Base.Symbol\Aardvark.Base.Symbol.csproj">
       <Name>Aardvark.Base.Symbol</Name>
       <Project>{0d5b3e80-26bd-4d67-a4dc-0dde84c478b6}</Project>
