--- a/src/Aardvark.Base.Hashing/Aardvark.Base.Hashing.csproj
+++ b/src/Aardvark.Base.Hashing/Aardvark.Base.Hashing.csproj
@@ -6,13 +6,13 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <OutputPath>..\..\bin\Debug\netstandard2.0\</OutputPath>
-    <DocumentationFile>..\..\bin\Debug\netstandard2.0\netstandard2.0\Aardvark.Base.HashCodes.xml</DocumentationFile>
+    <DocumentationFile>..\..\bin\Debug\netstandard2.0\netstandard2.0\Aardvark.Base.Hashing.xml</DocumentationFile>
     <NoWarn>1701;1702;1705;1591</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <OutputPath>..\..\bin\Release\netstandard2.0\</OutputPath>
-    <DocumentationFile>..\..\bin\Release\netstandard2.0\netstandard2.0\Aardvark.Base.HashCodes.xml</DocumentationFile>
+    <DocumentationFile>..\..\bin\Release\netstandard2.0\netstandard2.0\Aardvark.Base.Hashing.xml</DocumentationFile>
     <NoWarn>1701;1702;1705;1591</NoWarn>
   </PropertyGroup>
 
