--- a/src/Aardvark.Base.Text/Aardvark.Base.Text.csproj
+++ b/src/Aardvark.Base.Text/Aardvark.Base.Text.csproj
@@ -6,13 +6,13 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <OutputPath>..\..\bin\Debug\</OutputPath>
-    <DocumentationFile>..\..\bin\Debug\netstandard2.0\Aardvark.Base.TextParser.xml</DocumentationFile>
+    <DocumentationFile>..\..\bin\Debug\netstandard2.0\Aardvark.Base.Text.xml</DocumentationFile>
     <NoWarn>1701;1702;1705;1591</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <OutputPath>..\..\bin\Release\</OutputPath>
-    <DocumentationFile>..\..\bin\Release\netstandard2.0\Aardvark.Base.TextParser.xml</DocumentationFile>
+    <DocumentationFile>..\..\bin\Release\netstandard2.0\Aardvark.Base.Text.xml</DocumentationFile>
     <NoWarn>1701;1702;1705;1591</NoWarn>
   </PropertyGroup>
 
