--- a/src/Aardvark.Base.Tup/Aardvark.Base.Tup.csproj
+++ b/src/Aardvark.Base.Tup/Aardvark.Base.Tup.csproj
@@ -6,13 +6,13 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <OutputPath>..\..\bin\Debug\netstandard2.0\</OutputPath>
-    <DocumentationFile>..\..\bin\Debug\netstandard2.0\netstandard2.0\Aardvark.Base.Tup.xml</DocumentationFile>
+    <DocumentationFile>..\..\bin\Debug\netstandard2.0\Aardvark.Base.Tup.xml</DocumentationFile>
     <NoWarn>1701;1702;1705;1591</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <OutputPath>..\..\bin\Releaseg\netstandard2.0\</OutputPath>
-    <DocumentationFile>..\..\bin\Releaseg\netstandard2.0\netstandard2.0\Aardvark.Base.Tup.xml</DocumentationFile>
+    <OutputPath>..\..\bin\Release\netstandard2.0\</OutputPath>
+    <DocumentationFile>..\..\bin\Release\netstandard2.0\Aardvark.Base.Tup.xml</DocumentationFile>
     <NoWarn>1701;1702;1705;1591</NoWarn>
   </PropertyGroup>
 
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Aardvark.Base.HashCodes\Aardvark.Base.HashCodes.csproj" />
+    <ProjectReference Include="..\Aardvark.Base.Hashing\Aardvark.Base.Hashing.csproj" />
   </ItemGroup>
 
 </Project>
