--- a/src/Aardvark.Base.Essentials/Aardvark.Base.Essentials.csproj
+++ b/src/Aardvark.Base.Essentials/Aardvark.Base.Essentials.csproj
@@ -97,6 +97,10 @@
       <Project>{1f843ba4-1fee-4d4e-be32-ee9701d907e1}</Project>
       <Name>Aardvark.Base.Geometry</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Aardvark.Base.Images\Aardvark.Base.Images.csproj">
+      <Project>{839e595c-0771-40bd-b17d-32288a2f558d}</Project>
+      <Name>Aardvark.Base.Images</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Aardvark.Base.Math\Aardvark.Base.Math.csproj">
       <Project>{caa4e460-e04b-45a4-8501-2694e61f72c9}</Project>
       <Name>Aardvark.Base.Math</Name>
