--- a/src/Aardvark.Base.Images/Aardvark.Base.Images.csproj
+++ b/src/Aardvark.Base.Images/Aardvark.Base.Images.csproj
@@ -7,15 +7,23 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <OutputPath>..\..\bin\Debug</OutputPath>
-    <DocumentationFile>..\..\bin\Debug\netstandard2.0\Aardvark.Base.Rendering.xml</DocumentationFile>
+    <DocumentationFile>..\..\bin\Debug\netstandard2.0\Aardvark.Base.Images.xml</DocumentationFile>
     <NoWarn>1701;1702;1705;1591</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <OutputPath>..\..\bin\Release</OutputPath>
-    <DocumentationFile>..\..\bin\Release\netstandard2.0\Aardvark.Base.Rendering.xml</DocumentationFile>
+    <DocumentationFile>..\..\bin\Release\netstandard2.0\Aardvark.Base.Images.xml</DocumentationFile>
     <NoWarn>1701;1702;1705;1591</NoWarn>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="TensorExtensions_template.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="TensorExtensions_template.cs" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Aardvark.Base.Math\Aardvark.Base.Math.csproj" />
