--- a/src/Demo/PixImageDemo/PixImageDemo.csproj
+++ b/src/Demo/PixImageDemo/PixImageDemo.csproj
@@ -65,6 +65,10 @@
       <Project>{8fc336ea-7de8-428f-949d-3320208a5ee5}</Project>
       <Name>Aardvark.Base.Hashing</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Aardvark.Base.Images\Aardvark.Base.Images.csproj">
+      <Project>{839e595c-0771-40bd-b17d-32288a2f558d}</Project>
+      <Name>Aardvark.Base.Images</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Aardvark.Base.Introspection\Aardvark.Base.Introspection.csproj">
       <Project>{919e549b-980d-4565-b504-2d0244d23ce6}</Project>
       <Name>Aardvark.Base.Introspection</Name>
