--- a/src/Tests/Aardvark.Base.Tests/Aardvark.Base.Tests.csproj
+++ b/src/Tests/Aardvark.Base.Tests/Aardvark.Base.Tests.csproj
@@ -89,6 +89,10 @@
       <Project>{8fc336ea-7de8-428f-949d-3320208a5ee5}</Project>
       <Name>Aardvark.Base.Hashing</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\Aardvark.Base.Images\Aardvark.Base.Images.csproj">
+      <Project>{839e595c-0771-40bd-b17d-32288a2f558d}</Project>
+      <Name>Aardvark.Base.Images</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Aardvark.Base.Math\Aardvark.Base.Math.csproj">
       <Project>{caa4e460-e04b-45a4-8501-2694e61f72c9}</Project>
       <Name>Aardvark.Base.Math</Name>
